[project]
name = "una"
version = "0.0"
requires-python = ">= 3.11"

[tool.uv]
dev-dependencies = []
package = false

[tool.uv.workspace]
members = ["una", "plugins/hatch"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["A", "E", "F", "I", "N", "T100", "UP", "ANN401"]
ignore = ["F841"]  # pyright does this

[tool.ruff.lint.isort]
known-first-party = ["una"]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
strict = ["**/*.py"]
extraPaths = ["plugins/hatch"]
reportUnnecessaryTypeIgnoreComment = true
reportImplicitOverride = false
reportUnusedCallResult = false
enableTypeIgnoreComments = true

[tool.pytest.ini_options]
addopts = "-sv"
