[project]
name = "una"
dynamic = ["version"]
description = "Python monorepo tooling"
authors = [
    { name = "Chris Arderne", email = "chris@rdrn.me" }
]
readme = "../README.md"
license = {text = "MIT License"}
requires-python = ">= 3.11"
keywords = ["uv", "monorepo", "build", "python"]

classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "dataclasses-json ~= 0.6",
  "rich ~= 13.1",
  "tomlkit ~= 0.10",
  "typer ~= 0.8",
]

[project.urls]
homepage = "https://github.com/carderne/una"
repository = "https://github.com/carderne/una"

[project.scripts]
una = "una.cli:app"

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["una"]

[tool.hatch.version]
source = "vcs"
raw-options = { root = ".." }

[tool.basedpyright]
venvPath = ".."
venv = ".venv"
pythonVersion = "3.11"
strict = ["**/*.py"]
reportUnnecessaryTypeIgnoreComment = true
reportImplicitOverride = false
reportUnusedCallResult = false
enableTypeIgnoreComments = true
